Time: 1 ms (86.57%) | Memory: 44 MB (88.21%) - LeetSync